test_files/s_cproc/include/test_002/e_expect.output
/home/jason/github/stupid_lib/test_files/s_cproc/include/test_002/i.input:1:9: error: #include expects "FILENAME" or <FILENAME>
 #include
         ^
